# ios-snapshot-test-case

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  CHANGELOG.md  PATENT TERMS FOR FACEBOOK MATERIAL  Package.swift  README.md  WORKSPACE  build.sh  iOSSnapshotTestCase.podspec
.github/workflows/: main.yml
FBSnapshotTestCase/: FBSnapshotTestCase.h  FBSnapshotTestCase.m  FBSnapshotTestCasePlatform.h  FBSnapshotTestCasePlatform.m  FBSnapshotTestController.h  FBSnapshotTestController.m  SwiftSupport.swift
FBSnapshotTestCase.xcodeproj/: project.pbxproj
FBSnapshotTestCase.xcodeproj/xcshareddata/xcschemes/: FBSnapshotTestCase iOS.xcscheme  FBSnapshotTestCase macOS.xcscheme  FBSnapshotTestCase tvOS.xcscheme
FBSnapshotTestCase/Categories/: UIApplication+StrictKeyWindow.h  UIApplication+StrictKeyWindow.m  UIControl+SendActions.h  UIControl+SendActions.m  UIImage+Compare.h  UIImage+Compare.m  UIImage+Diff.h  UIImage+Diff.m  UIImage+Snapshot.h  UIImage+Snapshot.m
FBSnapshotTestCase/Categories-macOS/: NSApplication+StrictKeyWindow.h  NSApplication+StrictKeyWindow.m  NSImage+Compare.h  NSImage+Compare.m  NSImage+Diff.h  NSImage+Diff.m  NSImage+ImageWithContentsOfFile.h  NSImage+ImageWithContentsOfFile.m  NSImage+Snapshot.h  NSImage+Snapshot.m  NSImagePNGRepresentation.h  NSImagePNGRepresentation.m  NSScreen+Scale.h  NSScreen+Scale.m  NSStringFromNSSize.h  NSStringFromNSSize.m
FBSnapshotTestCase/Core-Support/: SwiftSupport.swift
FBSnapshotTestCase/Public/: FBSnapshotTestCase.h  FBSnapshotTestController.h
FBSnapshotTestCase/Support/: SwiftSupport.swift
FBSnapshotTestCaseDemo/: Podfile
FBSnapshotTestCaseDemo/FBSnapshotTestCaseDemo/: FBAppDelegate.m  main.m
FBSnapshotTestCaseDemo/FBSnapshotTestCaseDemo.xcodeproj/: project.pbxproj
FBSnapshotTestCaseDemo/FBSnapshotTestCaseDemoTests/: FBSnapshotTestCaseDemoTests.m  FBSnapshotTestCaseSwiftTests.swift
FBSnapshotTestCaseDemoMacOS/: Podfile
FBSnapshotTestCaseDemoMacOS/FBSnapshotTestCaseDemoMacOS/: AppDelegate.swift  Info.plist  ViewWithText.swift
FBSnapshotTestCaseDemoMacOS/FBSnapshotTestCaseDemoMacOS.xcodeproj/: project.pbxproj
FBSnapshotTestCaseDemoMacOS/FBSnapshotTestCaseDemoMacOS.xcworkspace/: contents.xcworkspacedata
FBSnapshotTestCaseDemoMacOS/FBSnapshotTestCaseDemoMacOSTests/: FBSnapshotTestCaseDemoMacOSSnapshotTests.swift
FBSnapshotTestCaseTests/: FBSnapshotControllerTests.m
FBSnapshotTestCaseTests/Core/: FBSnapshotControllerTests.m
Sample/FBSnapshotTestCaseDemo/: Podfile
Sources/ios-snapshot-test-case/: ios_snapshot_test_case.swift
Tests/ios-snapshot-test-caseTests/: ios_snapshot_test_caseTests.swift
demos/FBSnapshotTestCaseDemo/: Podfile
demos/iOSSnapshotTestCaseCarthageDemo/: Cartfile.resolved
docs/: HowToRelease.md  LibraryVsApplicationTestBundles.md
iOSSnapshotTestCaseCarthageDemo/: Cartfile  Cartfile.resolved
iOSSnapshotTestCaseCarthageDemo/iOSSnapshotTestCaseCarthageDemo.xcodeproj/: project.pbxproj
iOSSnapshotTestCaseSwiftPMDemo/Tests iOS/: iOSSnapshotTestCaseSwiftPMDemoSwiftTests.swift
iOSSnapshotTestCaseSwiftPMDemo/iOSSnapshotTestCaseSwiftPMDemo.xcodeproj/: project.pbxproj
iOSSnapshotTestCaseSwiftPMLibDemo/: Package.resolved  Package.swift  README.md
src/iOSSnapshotTestCase/: SwiftSupport.swift
src/iOSSnapshotTestCaseCore/: FBSnapshotTestCase.m
src/iOSSnapshotTestCaseTests/: BUILD.bazel  FBSnapshotControllerTests.m
(+76 files in other folders)
