load(
    "@build_bazel_rules_swift//swift:swift.bzl",
    "swift_library",
)

objc_library(
    name = "iOSSnapshotTestCaseCore",
    module_name = "iOSSnapshotTestCaseCore",
    srcs = glob(["src/iOSSnapshotTestCaseCore/*.m", "src/iOSSnapshotTestCaseCore/Categories/*.h", "src/iOSSnapshotTestCaseCore/Categories/*.m"], allow_empty = False),
    hdrs = glob(["src/iOSSnapshotTestCaseCore/Public/*.h"], allow_empty = False),
    defines = [
        "SWIFT_PACKAGE"
    ],
    copts = [
        "-Wno-deprecated-declarations"
    ],
    visibility = ["//visibility:public"]
)

swift_library(
    name = "iOSSnapshotTestCase",
    module_name = "iOSSnapshotTestCase",
    srcs = ["src/iOSSnapshotTestCaseCore/SwiftSupport.swift"],
    deps = [
        ":iOSSnapshotTestCaseCore"
    ],
    visibility = ["//visibility:public"]
)
