load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")

objc_library(
    name = "iOSSnapshotTestCaseTestsLib",
    enable_modules = True,
    srcs = ["FBSnapshotControllerTests.m"],
    deps = [
        "//:iOSSnapshotTestCaseCore"
    ],
    defines = [
        "BAZEL"
    ],
    data = glob(["Resources/*.png"], allow_empty = False),
    sdk_frameworks = [
        "CoreGraphics",
        "QuartzCore"
    ]
)

ios_unit_test(
    name = "iOSSnapshotTestCaseTests",
    deps = [
        ":iOSSnapshotTestCaseTestsLib"
    ],
    minimum_os_version = "10.0",
)
